trainings/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trainings
  labels:
    app: trainings
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: trainings
